--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "npm": ">=6.14.6"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.6.0",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.27.1",
     "cookie-parser": "^1.4.5",
